# cybershoke_ads_remove

./: README.md  main.py  pyproject.toml  script.py  settings.json
src/: get_csgo_path.py  get_steam_path.py  parse_steam_lib.py
